--- a/windows.update.removal/README
+++ b/windows.update.removal/README
@@ -1,5 +1,13 @@
-Run under Anministrator
-Idea: to remove all 3 Windows Update related services
+All code should be run under Anministrator
+Idea: to remove all (3) Windows Update related services
+- wuauserv
+- UsoSvc
+- WaaSMedicSvc
+
+For 1 of them - WaaSMedicSvc need additionsl registry permission.
+Permission are given using SetACL utility https://helgeklein.com/download/
+Utility should be unpacked to C:\Program Files\SetACL.exe
+
 
 Currecnt state:
 2 services(wuauserv and UsoSvc) were hard removed.
